2021-12-21  李俊緯  <mmemmew@gmail.com>

	Fix errors discovered by flymake.

2021-12-20  李俊緯  <mmemmew@gmail.com>

	* blist.el: Fix bugs caused by using invisible texts.

2021-12-19  JSDurand  <mmemmew@gmail.com>

	* blist.el: Implement hiding groups by buffer-invisibility-spec.

2021-09-17  JSDurand  <mmemmew@gmail.com>

	* blist.el (blist-relocate): Fix a bug caused by a typo.

2021-09-17  JSDurand  <mmemmew@gmail.com>

	Add Info and PDF manuals
	* README.org (Columns, Calling convention(s)): Fix some typos.

	* blist.texinfo: Source of manuals.

	* blist.info: An Info manual that is suitable for reading inside
	  Emacs.

	* blist.pdf: For those without Emacs, a PDF manual is provided as an
	  unfortunate fallback.

	* scaled-screenshot1.png: Scale down the screen shot to fit in the
	  display in the Info manual.

2021-09-17  JSDurand  <mmemmew@gmail.com>

	Fix bugs caused by empty annotations.

2021-09-16  JSDurand  <mmemmew@gmail.com>

	Fix some README issues and add README.

2021-09-16  JSDurand  <mmemmew@gmail.com>

	Implement editing annotations.

2021-09-16  JSDurand  <mmemmew@gmail.com>

	Implement loading functionality.

2021-09-15  JSDurand  <mmemmew@gmail.com>

	Fix a wrong function call.

2021-09-15  JSDurand  <mmemmew@gmail.com>

	new: Preserve the original point in building the list.

2021-09-14  JSDurand  <mmemmew@gmail.com>

	More features.
	(blist-select-manner): Add the option of "main-side", and modify
	defcustom type keyword.

	(blist-select): Support main-side way of displaying multiple windows.

	(blist-locate): Echo the location of the bookmark.

	(blist-relocate-history, blist-relocate): Set the location of an
	existing bookmark to a new location, to adapt to this fast-changing
	world.

	(blist-show-annotation, blist-show-all-annotations): Show annotations
	of some or all bookmarks.

2021-09-14  JSDurand  <mmemmew@gmail.com>

	More features.
	* blist.el (blist-annotation-column-name, blist-annotation-column):